# inflation-estimation-model

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  pyproject.toml
src/inflation_estimate/: main.py
src/inflation_estimation/data/: constants.py  dataset.py  europe.py  ua.py
thesis/: .latexmkrc  Diploma.tex  README.md
thesis/src/: bachelor_thesis.cls  overleaf.tex  thesis.bib  thesis.fdb_latexmk  thesis.tex
thesis/src/chapters/: a1_abstract.tex  a2_shortings.tex  a3_introduction.tex  c1_chapter_01.tex  c2_chapter_02.tex  c3_chapter_03.tex  w2_bibliography.tex  z1_appendix_A.tex  z2_appendix_B.tex
thesis/src/frontmatter/: a00_title.tex  a01_specification.tex
thesis/src/preamble/: 01_packages.tex  02_redefinitions.tex  03_data.tex
