[project]
name = "inflation_estimation_model"
version = "0.1.0"
description = ""
authors = [
    {name = "AleksandrZhukovin",email = "sashokzuk@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
