[project]
name = "inflation_estimation_model"
version = "0.1.0"
description = ""
authors = [
    {name = "AleksandrZhukovin",email = "sashokzuk@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "yfinance (>=1.0,<2.0)",
    "eurostat (>=1.1.1,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pandas-datareader (>=0.10.0,<0.11.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
